--- a/proposal/Packages/uqtitle.sty
+++ b/proposal/Packages/uqtitle.sty
@@ -36,7 +36,7 @@
 %*************************************
 % Title Page layout
 %*************************************
-\pagestyle{empty}	
+\pagestyle{fancy}
 %Suppress the header.
 \rmfamily					
 %Make sure we have Roman font family.
