--- a/proposal/References/Bibliography.bib
+++ b/proposal/References/Bibliography.bib
@@ -5,7 +5,7 @@
    issn = {0362-1340},
    issue = {10},
    journal = {ACM SIGPLAN Notices},
-   month = {10},
+   month = {Oct},
    pages = {243-262},
    publisher = {ACM Press},
    title = {Strictly declarative specification of sophisticated points-to analyses},
@@ -20,7 +20,7 @@
   journal      = {CoRR},
   volume       = {abs/2112.12398},
   year         = {2021},
-  url          = {https://arxiv.org/abs/2112.12398},
+  url          = {https://doi.org/10.48550/arXiv.2112.12398},
   eprinttype    = {arXiv},
   eprint       = {2112.12398},
   timestamp    = {Tue, 04 Jan 2022 15:59:27 +0100},
@@ -35,7 +35,7 @@
    doi = {10.1145/1065167.1065169},
    isbn = {1595930620},
    booktitle = {Proceedings of the twenty-fourth ACM SIGMOD-SIGACT-SIGART symposium on Principles of database systems},
-   month = {6},
+   month = {Jun},
    pages = {1-12},
    publisher = {ACM},
    title = {Context-sensitive program analysis as database queries},
@@ -49,7 +49,7 @@
    doi = {10.1145/1273920.1273923},
    isbn = {9781595937698},
    booktitle = {Proceedings of the 9th ACM SIGPLAN international conference on Principles and practice of declarative programming},
-   month = {7},
+   month = {Jul},
    pages = {13-24},
    publisher = {ACM},
    title = {Interactive, scalable, declarative program analysis},
@@ -65,7 +65,7 @@
    issue = {2},
    journal = {ACM SIGPLAN Notices},
    keywords = {Peephole optimization,branch prediction,regular expressions},
-   month = {2},
+   month = {Feb},
    pages = {47-50},
    title = {Declarative peephole optimization using string pattern matching},
    volume = {34},
@@ -83,7 +83,7 @@
   journal      = {CoRR},
   volume       = {abs/2002.02268},
   year         = {2020},
-  url          = {https://arxiv.org/abs/2002.02268},
+  url          = {https://doi.org/10.48550/arXiv.2002.02268},
   eprinttype    = {arXiv},
   eprint       = {2002.02268},
   timestamp    = {Tue, 10 May 2022 15:24:30 +0200},
@@ -98,7 +98,7 @@
    issn = {0001-0782},
    issue = {1},
    journal = {Communications of the ACM},
-   month = {12},
+   month = {Dec},
    pages = {106-115},
    publisher = {Association for Computing Machinery},
    title = {Halide: decoupling algorithms from schedules for high-performance image processing},
@@ -116,7 +116,7 @@
    issue = {5},
    booktitle = {Proceedings of the 18th ACM SIGPLAN/SIGBED Conference on Languages, Compilers, and Tools for Embedded Systems},
    keywords = {Profile-guided optimizations,Program profiling},
-   month = {6},
+   month = {Jun},
    pages = {1-10},
    publisher = {ACM},
    title = {{AOT} vs. {JIT}: impact of profile data on code quality},
@@ -133,7 +133,7 @@
    isbn = {9781450326018},
    booktitle = {Proceedings of the 7th ACM workshop on Virtual machines and intermediate languages},
    keywords = {Intermediate representation,Java virtual machine,Just-in-time compilation,Speculative optimization},
-   month = {10},
+   month = {Oct},
    pages = {1-10},
    publisher = {ACM},
    title = {An intermediate representation for speculative optimizations in a dynamic compiler},
@@ -148,7 +148,7 @@
    isbn = {978-953-233-098-4},
    booktitle = {2019 42nd International Convention on Information and Communication Technology, Electronics and Microelectronics (MIPRO)},
    keywords = {Graal,GraalVM,Java,Java Virtual Machine,cross-language interoperability,polyglot virtual machine,programming languages},
-   month = {5},
+   month = {May},
    pages = {1671-1676},
    publisher = {IEEE},
    title = {Exploring Aspects of Polyglot High-Performance Virtual Machine {GraalVM}},
@@ -161,7 +161,7 @@
    doi = {10.1145/207110.207154},
    isbn = {0897916972},
    booktitle = {Proceedings of the ACM SIGPLAN 1995 conference on Programming language design and implementation},
-   month = {6},
+   month = {Jun},
    pages = {246-257},
    publisher = {ACM},
    title = {Global code motion/global value numbering},
@@ -178,20 +178,17 @@
    booktitle={Conference: 2nd Asia-Pacific Programming Languages and Compilers WorkshopAt: Shenzhen, China}
 }
 
-@article{Ron1991,
-   abstract = {In optimizing compilers, data structure choices directly influence the power and efficiency of practical program optimization. A poor choice of data structure can inhibit optimization or slow compilation to the point that advanced optimization features become undesirable. Recently, static single assignment form and the control dependence graph have been proposed to represent data flow and control flow propertiee of programs. Each of these previously unrelated techniques lends efficiency and power to a useful class of program optimization. Although both of these structures are attractive, the difficulty of their construction and their potential size have discouraged their use. We present new algorithms that efficiently compute these data structures for arbitrary control flow graphs. The algorithms use dominance frontiers, a new concept that may have other applications. We also give analytical and experimental evidence that all of these data structures are usually linear in the size of the original program. This paper thus presents strong evidence that these structures can be of practical use in optimization.},
-   author = {Ron Cytron and Jeanne Ferrante and Barry K. Rosen and Mark N. Wegman and F. Kenneth Zadeck},
-   doi = {10.1145/115372.115320},
-   issn = {0164-0925},
-   issue = {4},
-   journal = {ACM Transactions on Programming Languages and Systems},
-   keywords = {122 [Artificial Intelligence]: Automatic Programming-program transformation General Terms: Algorithms, Languages Additional Key Words and Phrases: Control dependence, control flow graph, clef-use chain, dominator, optimizing compilers,D33 [Programming Languages]: Language Constructs-control structures,D34 [Programming Languages]: Processors-compilers,I 12 [Algebraic Manipulation]: Algorithms-analysis of algorithms,data types and structures,optimization,procedures, functions and subroutines},
-   month = {10},
-   pages = {451-490},
-   title = {Efficiently computing static single assignment form and the control dependence graph},
-   volume = {13},
-   url = {https://dl.acm.org/doi/10.1145/115372.115320},
-   year = {1991},
+@inproceedings{Ron1991,
+   author = {B. K. Rosen and M. N. Wegman and F. K. Zadeck},
+   city = {New York, New York, USA},
+   doi = {10.1145/73560.73562},
+   isbn = {0897912527},
+   booktitle = {Proceedings of the 15th ACM SIGPLAN-SIGACT symposium on Principles of programming languages  - POPL '88},
+   pages = {12-27},
+   publisher = {ACM Press},
+   title = {Global value numbers and redundant computations},
+   url = {https://dl.acm.org/doi/10.1145/73560.73562},
+   year = {1988},
 }
 
 @article{Wimmer2019,
@@ -202,7 +199,7 @@
    issue = {OOPSLA},
    journal = {Proceedings of the ACM on Programming Languages},
    keywords = {Ahead-of-time compilation,Compiler,Graal,GraalVM,Java,Optimization,Virtual machine},
-   month = {10},
+   month = {Oct},
    pages = {1-29},
    publisher = {Association for Computing Machinery},
    title = {Initialize once, start fast: application initialization at build time},
@@ -219,7 +216,7 @@
    isbn = {9798400700262},
    booktitle = {Proceedings of the 12th ACM SIGPLAN International Conference on Certified Programs and Proofs},
    keywords = {GraalVM compiler,{Isabelle/HOL},sea-of-nodes intermediate representation,verified code optimizer},
-   month = {1},
+   month = {Jan},
    pages = {320-333},
    publisher = {ACM},
    title = {Verifying Term Graph Optimizations using {Isabelle/HOL}},
@@ -235,20 +232,11 @@
    issue = {21},
    journal = {Applied Sciences (Switzerland)},
    keywords = {data aggregation,data warehouse,prolog},
-   month = {11},
+   month = {Nov},
    publisher = {MDPI},
    title = {Brief Report on the Advanced Use of Prolog for Data Warehouses},
    volume = {12},
    year = {2022},
-}
-
-@book{rodriguez2020,
-  author={Andres Rodriguez},
-  title={Deep Learning Systems: Algorithms, Compilers, and Processors for Large-Scale Production},
-  series={Synthesis Lectures on Computer Architecture},
-  publisher={Morgan & Claypool Publishers},
-  month={Oct.},
-  year={2020}
 }
 
 @inproceedings{Prokopec2017,
@@ -258,7 +246,7 @@
    isbn = {9781450355292},
    booktitle = {SCALA 2017 - Proceedings of the 8th ACM SIGPLAN International Symposium on Scala, co-located with SPLASH 2017},
    keywords = {Collections,Data-parallelism,Filterators,Functional combinators,Inlining,JIT compilation,Partial escape analysis,Program optimization,Scalar replacement},
-   month = {10},
+   month = {Oct},
    pages = {29-40},
    publisher = {Association for Computing Machinery, Inc},
    title = {Making collection operations optimal with aggressive JIT compilation},
@@ -318,7 +306,7 @@
   journal      = {CoRR},
   volume       = {abs/2107.12909},
   year         = {2021},
-  url          = {https://arxiv.org/abs/2107.12909},
+  url          = {https://doi.org/10.48550/arXiv.2107.12909},
   eprinttype    = {arXiv},
   eprint       = {2107.12909},
   timestamp    = {Fri, 30 Jul 2021 13:03:06 +0200},
